--- a/Back/ProjetoEscola.Api/appsettings.Development.json
+++ b/Back/ProjetoEscola.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection" : "Data Source= ProjetoEscola.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
