--- a/Front/ProjetoEscola-App/package.json
+++ b/Front/ProjetoEscola-App/package.json
@@ -12,13 +12,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.0",
+    "@angular/cdk": "^9.2.1",
     "@angular/common": "~9.1.0",
     "@angular/compiler": "~9.1.0",
     "@angular/core": "~9.1.0",
+    "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.1.0",
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "bootstrap": "^4.4.1",
+    "bootstrap-icons": "^1.0.0-alpha3",
+    "bootswatch": "^4.4.1",
+    "metro4": "4.3.5",
+    "moment": "^2.24.0",
+    "ng-metro4": "^2.0.0",
+    "ngx-bootstrap": "^5.6.1",
+    "ngx-toastr": "^12.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
